[package]
name = "ldk-sample"
version = "0.1.0"
authors = ["Valentine Wallace <vwallace@protonmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightning = { git = "https://github.com/orbitalturtle/rust-lightning", branch = "v0.0.118-custom", features = ["max_level_trace"] }
lightning-block-sync = { git = "https://github.com/orbitalturtle/rust-lightning", branch = "v0.0.118-custom", features = [ "rpc-client", "tokio" ] }
lightning-invoice = { version = "0.25.0" }
lightning-net-tokio = { git = "https://github.com/orbitalturtle/rust-lightning", branch = "v0.0.118-custom" }
lightning-persister = { git = "https://github.com/orbitalturtle/rust-lightning", branch = "v0.0.118-custom" }
lightning-background-processor = { git = "https://github.com/orbitalturtle/rust-lightning", branch = "v0.0.118-custom", features = [ "futures" ] }
lightning-rapid-gossip-sync = { git = "https://github.com/orbitalturtle/rust-lightning", branch = "v0.0.118-custom" }

base64 = "0.13.0"
bitcoin = "0.29.0"
bitcoin-bech32 = "0.12"
bech32 = "0.8"
libc = "0.2"
log = "0.4.17"
tempfile = "3.5.0"

chrono = { version = "0.4", default-features = false, features = ["clock"] }
rand = "0.4"
serde_json = { version = "1.0" }
tokio = { version = "1", features = [ "io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time" ] }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
